fix: fix update user
