# src/validation/user_validation.go
@@ -13,16 +13,15 @@ type CreateUser struct {
 }
 
 type UpdateUser struct {
-	Name           string               `json:"name,omitempty" validate:"omitempty,max=50" example:"fake name"`
-	Email          string               `json:"email,omitempty" validate:"omitempty,email,max=50" example:"fake@example.com"`
-	Password       string               `json:"password,omitempty" validate:"omitempty,min=8,max=20,password" example:"password1"`
-	ProfilePicture string               `json:"profile_picture,omitempty" validate:"omitempty,url,max=255" example:"https://example.com/profile.jpg"`
-	BirthDate      *time.Time           `json:"birth_date,omitempty" validate:"omitempty"`
-	Height         *float64             `json:"height,omitempty" validate:"omitempty,gte=0,lte=300" example:"175.5"`
-	Weight         *float64             `json:"weight,omitempty" validate:"omitempty,gte=0,lte=500" example:"70.3"`
-	Gender         *model.GenderType    `json:"gender,omitempty" validate:"omitempty,oneof=Male Female" example:"Male"`
-	ActivityLevel  *model.ActivityLevel `json:"activity_level,omitempty" validate:"omitempty,oneof=Light Medium Heavy" example:"Medium"`
-	MedicalHistory *string              `json:"medical_history,omitempty" validate:"omitempty,max=1000" example:"No known allergies"`
+	Name           string               `form:"name,omitempty" validate:"omitempty,max=50" example:"fake name"`
+	Email          string               `form:"email,omitempty" validate:"omitempty,email,max=50" example:"fake@example.com"`
+	Password       string               `form:"password,omitempty" validate:"omitempty,min=8,max=20,password" example:"password1"`
+	BirthDate      *time.Time           `form:"birth_date,omitempty" validate:"omitempty"`
+	Height         *float64             `form:"height,omitempty" validate:"omitempty,gte=0,lte=300" example:"175.5"`
+	Weight         *float64             `form:"weight,omitempty" validate:"omitempty,gte=0,lte=500" example:"70.3"`
+	Gender         *model.GenderType    `form:"gender,omitempty" validate:"omitempty,oneof=Male Female" example:"Male"`
+	ActivityLevel  *model.ActivityLevel `form:"activity_level,omitempty" validate:"omitempty,oneof=Light Medium Heavy" example:"Medium"`
+	MedicalHistory *string              `form:"medical_history,omitempty" validate:"omitempty,max=1000" example:"No known allergies"`
 }
 
 type UpdatePassOrVerify struct {
